--- a/index.html
+++ b/index.html
@@ -5,66 +5,79 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Information about web studio" />
     <title>Web Studio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
+        <a class="logo link" href="./index.html">
+          Web<span class="logo accent-navy-blue">Studio</span>
+        </a>
+        <ul class="list">
           <li>
-            <a href="#studio">Studio</a>
+            <a class="nav-link link" href="./index.html">Studio</a>
           </li>
           <li>
-            <a href="#portfolio">Portfolio</a>
+            <a class="nav-link link" href="./portfolio.html">Portfolio</a>
           </li>
           <li>
-            <a href="#contacts">Contacts</a>
+            <a class="nav-link link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
-      <address>
-        <ul>
+      <address class="address">
+        <ul class="list">
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="address-item link" href="mailto:info@devstudio.com">
+              info@devstudio.com
+            </a>
           </li>
           <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="address-item link" href="tel:+110001111111">
+              +11 (000) 111-11-11
+            </a>
           </li>
         </ul>
       </address>
     </header>
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero-screen">
+        <h1 class="hero-screen-title">Effective Solutions for Your Business</h1>
+        <button class="hero-screen-btn" type="button">Order Service</button>
       </section>
       <section>
-        <h2>Our advantages</h2>
-        <ul>
+        <h2 class="section-title">Our advantages</h2>
+        <ul class="list">
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="sub-title">Strategy</h3>
+            <p class="general-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="sub-title">Punctuality</h3>
+            <p class="general-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="sub-title">Diligence</h3>
+            <p class="general-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="sub-title">Technologies</h3>
+            <p class="general-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -72,11 +85,11 @@
         </ul>
       </section>
       <section>
-        <h2>What are we doing</h2>
-        <ul>
+        <h2 class="section-title">What are we doing</h2>
+        <ul class="list">
           <li>
             <img
-              src="./images/Rectangle_71-2.jpg"
+              src="./images/main-page/Rectangle_71-2.jpg"
               alt="computer"
               width="360"
               height="300"
@@ -84,7 +97,7 @@
           </li>
           <li>
             <img
-              src="./images/Rectangle_71-1.jpg"
+              src="./images/main-page/Rectangle_71-1.jpg"
               alt="mobile phones"
               width="360"
               height="300"
@@ -92,7 +105,7 @@
           </li>
           <li>
             <img
-              src="./images/Rectangle_71.jpg"
+              src="./images/main-page/Rectangle_71.jpg"
               alt="mobile phone"
               width="360"
               height="300"
@@ -100,55 +113,58 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <section class="team">
+        <h2 class="section-title">Our Team</h2>
+        <ul class="list">
+          <li class="team-item">
             <img
-              src="./images/img-3.jpg"
+              src="./images/main-page/img-3.jpg"
               alt="personal photo"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="sub-title">Mark Guerrero</h3>
+            <p class="general-text">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
-              src="./images/img-2.jpg"
+              src="./images/main-page/img-2.jpg"
               alt="personal photo"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="sub-title">Tom Ford</h3>
+            <p class="general-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
-              src="./images/img-1.jpg"
+              src="./images/main-page/img-1.jpg"
               alt="personal photo"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="sub-title">Camila Garcia</h3>
+            <p class="general-text">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
-              src="./images/img.jpg"
+              src="./images/main-page/img.jpg"
               alt="personal photo"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="sub-title">Daniel Wilson</h3>
+            <p class="general-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a class="logo link" href="./index.html">
+        Web
+        <span class="logo accent-cloud">Studio</span>
+      </a>
+      <p class="footer-slogan">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
